--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>mttr</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
     <packaging>hpi</packaging>
     <name>mean time to repair plugin</name>
     <description>statistics job builds mean time to repair</description>
@@ -26,7 +26,8 @@
         <connection>scm:git:ssh://github.com/zhaozhiming/mttr.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/zhaozhiming/mttr.git</developerConnection>
         <url>https://github.com/zhaozhiming/mttr.git</url>
-    </scm>
+      <tag>mttr-1.2</tag>
+  </scm>
 
     <!-- get every artifact through repo.jenkins-ci.org, which proxies all the artifacts that we need -->
     <repositories>
